compiler-core/main/build/package_interface/snapshots/gleam_core__build__package_interface__tests__constructors_with_documentation.snap
---
source: compiler-core/src_refactored/build/package_interface/tests.rs
assertion_line: 327
expression: "\npub type Wibble {\n  /// This is the Wibble variant. It contains some example data.\n  Wibble(Int)\n  /// This is the Wobble variant. It is a recursive type.\n  Wobble(Wibble)\n}\n"
snapshot_kind: text
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {
        "Wibble": {
          "documentation": null,
          "deprecation": null,
          "parameters": 0,
          "constructors": [
            {
              "documentation": " This is the Wibble variant. It contains some example data.\n",
              "name": "Wibble",
              "parameters": [
                {
                  "label": null,
                  "type": {
                    "kind": "named",
                    "name": "Int",
                    "package": "",
                    "module": "gleam",
                    "parameters": []
                  }
                }
              ]
            },
            {
              "documentation": " This is the Wobble variant. It is a recursive type.\n",
              "name": "Wobble",
              "parameters": [
                {
                  "label": null,
                  "type": {
                    "kind": "named",
                    "name": "Wibble",
                    "package": "my_package",
                    "module": "my/module",
                    "parameters": []
                  }
                }
              ]
            }
          ]
        }
      },
      "constants": {},
      "functions": {}
    }
  }
}
