compiler-core/main/build/package_interface/snapshots/gleam_core__build__package_interface__tests__imported_type.snap
---
source: compiler-core/src_refactored/build/package_interface/tests.rs
assertion_line: 267
expression: "\nimport other_module.{type Element}\npub fn main() -> Element(Int) {}\n"
snapshot_kind: text
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {},
      "constants": {},
      "functions": {
        "main": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true
          },
          "parameters": [],
          "return": {
            "kind": "named",
            "name": "Element",
            "package": "other_package",
            "module": "other_module",
            "parameters": [
              {
                "kind": "named",
                "name": "Int",
                "package": "",
                "module": "gleam",
                "parameters": []
              }
            ]
          }
        }
      }
    }
  }
}
