compiler-core/main/build/package_interface/snapshots/gleam_core__build__package_interface__tests__opaque_constructors_are_not_exposed.snap
---
source: compiler-core/src_refactored/build/package_interface/tests.rs
assertion_line: 221
expression: "pub opaque type Wibble { Wob }"
snapshot_kind: text
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {
        "Wibble": {
          "documentation": null,
          "deprecation": null,
          "parameters": 0,
          "constructors": []
        }
      },
      "constants": {},
      "functions": {}
    }
  }
}
