compiler-core/main/build/package_interface/snapshots/gleam_core__build__package_interface__tests__package_documentation_is_included.snap
---
source: compiler-core/src_refactored/build/package_interface/tests.rs
assertion_line: 185
expression: "\n//// Some package\n//// documentation!\n\npub fn main() { 1 }\n"
snapshot_kind: text
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [
        " Some package",
        " documentation!"
      ],
      "type-aliases": {},
      "types": {},
      "constants": {},
      "functions": {
        "main": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true
          },
          "parameters": [],
          "return": {
            "kind": "named",
            "name": "Int",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        }
      }
    }
  }
}
