compiler-core/main/build/package_interface/snapshots/gleam_core__build__package_interface__tests__private_definitions_are_not_included.snap
---
source: compiler-core/src_refactored/build/package_interface/tests.rs
assertion_line: 197
expression: "\nconst float = 1.1\nfn main() {}\ntype Wibble\ntype Wob = Int\n"
snapshot_kind: text
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {},
      "types": {},
      "constants": {},
      "functions": {}
    }
  }
}
